--- a/sass/scaffolding.scss
+++ b/sass/scaffolding.scss
@@ -1,24 +1,42 @@
 body {
-	background: #f3f3f3;
-	color: #26262F;
+  background-color: #e7e7ef;
+  font-family: 'Gotham Pro';
+  font-weight: 300;
+  font-style: normal;
 }
+.container {
+  box-sizing: border-box;
+	width: 95%;
+	margin: 0 auto;
 
-main {
-	//@include container-fluid();
-	padding: 0;
+	@media (min-width: 425px) {
+	  // width: 80%;
+	 }
 
-	@media (min-width: 768px) {
-		padding: 0;
+	 @media (min-width: 768px) {
+	  width: 90%;
+	 }
+
+	@media (min-width: 1023px) {
+		max-width: 1608px;
 	}
 }
 
 .visualy-hidden {
-	position: absolute;
-	width: 1px;
-	height: 1px;
-	margin: -1px;
-	padding: 0;
-	border: 0;
-	clip: rect(0 0 0 0);
-	overflow: hidden; 
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden; 
+}
+
+main.container {
+  position: relative;
+  top: -24px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
