--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,8 +6,7 @@
 @import "global/fonts.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
-@import "blocks/services.scss";
-@import "blocks/benefits.scss";
-@import "blocks/contacts.scss";
-@import "blocks/portfolio.scss";
+@import "blocks/sidebar.scss";
 
+
+@import "blocks/page-footer.scss";
